--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <dependencies>
         <dependency>
             <groupId>com.jmentor</groupId>
-            <artifactId>jqlearn-tictactoe</artifactId>
+            <artifactId>jtictactoe-qlearn</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
